--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2>Gallery</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="food_31.png" alt="Street Food">
+                <img src="images/food_29.png" alt="Street Food">
                 <div class="">
                     <p>Street Food Delights</p>
                 </div>
